fixed a minor bug. brush not working

--- a/src/app/paint/paint.component.html
+++ b/src/app/paint/paint.component.html
@@ -33,6 +33,6 @@
 </div>
 <canvas class="canvas" #imageCanvas id="imageCanvas" style="z-index: 0;">Your browser does not support canvas. Please
   upgrade it!</canvas>
-<canvas class="canvas" #drawingCanvas id="drawingCanvas" (mouseup)="mouseUp($event)" (mousedown)="mouseDown($event)"
-  (mousemove)="mouseMove($event)" style="z-index: 1;" (click)="drawLine($event)">Your browser does not support canvas.
+<canvas class="canvas" #drawingCanvas id="drawingCanvas" (mouseup)="mouseUp($event)" style="z-index: 1;"
+  (click)="drawLine($event)">Your browser does not support canvas.
   Please upgrade it!</canvas>
