--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ canvas {
 	padding: 10px;
 	position: absolute;
 	top: 0;
-	background-color: #2f2f2f;
+	background-color: #2c2c2c;
 	overflow: auto;
 }
 
